--- a/solid_server/FotSolid/health-application/public/index.html
+++ b/solid_server/FotSolid/health-application/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 
-  <title>FoT Energy App</title>
+  <title>Health Application</title>
 </head>
 
 <body style="margin:0px; padding: 0px;">
